Full Web View Done.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- Navigation Ends -->
       <!-- Banner Start -->
       <div class="container">
-	<div class="row align-items-center">
+	<div class="row align-items-center pb-5">
           <div class="col-lg-7 col">
 	    <h1 class="penguin-f-bebas penguin-fs-5 penguin-lh-6 penguin-heading-yellow">
 	      Be the Penguins
@@ -63,9 +63,255 @@
       </div>
     </header>
     <main>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="my-5">
+	<div class="container">
+	  <div class="row">
+            <div class="col">
+	      <h1 class="penguin-f-bebas penguin-heading-black penguin-fs-3 py-5">Woman Jacket</h1>
+	    </div>
+	  </div>
+	  <div class="row row-cols-1 row-cols-md-3 g-4">
+	    <div class="col">
+	      <div class="card h-100 penguin-border-radius">
+		<img src="assets/images/jacket-1.png" alt="Jacket One"
+		     class="card-img-top penguin-bg-ash penguin-m-card penguin-w-90 penguin-border-radius">
+		<div class="card-body d-flex justify-content-between flex-column">
+		  <div>
+		    <h5 class="card-title penguin-py-card penguin-fw-700 penguin-fs-1-5 penguin-heading-black">
+		      Yellow Coat Jacket
+		    </h5>
+		    <p class="card-text penguin-py-card penguin-heading-black">
+		      This is a longer card with supporting text below
+		      as a natural lead-in to additional content. This
+		      content is a little bit longer.
+		    </p>
+		  </div>
+		  <div class="d-flex justify-content-between align-items-center penguin-py-card">
+		    <h1 class="penguin-heading-yellow m-0">&#36;235</h1>
+		    <a class="btn penguin-btn-gradient-green text-white border-0 
+			      penguin-border-radius penguin-btn-padding">
+		      <img alt="" src="assets/icons/shopping-cart.png" width="24"/>
+		      BUY NOW
+		    </a>
+		  </div>
+		</div>
+	      </div>
+	    </div>
+	    <div class="col">
+	      <div class="card h-100 penguin-border-radius">
+		<img src="assets/images/jacket-2.png" alt="Jacket Two"
+		     class="card-img-top penguin-m-card penguin-bg-ash penguin-p-card penguin-w-90 
+			    penguin-border-radius">
+		<div class="card-body d-flex justify-content-between flex-column">
+		  <div>
+		     <h5 class="card-title penguin-py-card penguin-fw-700 penguin-fs-1-5 penguin-heading-black">
+		       Ladies Jacket
+		     </h5>
+		     <p class="card-text penguin-py-card penguin-heading-black">This is a short card.</p>
+		  </div>
+		  <div class="d-flex justify-content-between align-items-center penguin-py-card">
+		    <h1 class="penguin-heading-yellow m-0">&#36;235</h1>
+		    <a class="btn penguin-btn-gradient-green text-white border-0 
+			      penguin-border-radius penguin-btn-padding">
+		      <img alt="" src="assets/icons/shopping-cart.png" width="24"/>
+		      BUY NOW
+		    </a>
+		  </div>
+		</div>
+	      </div>
+	    </div>
+	    <div class="col">
+	      <div class="card h-100">
+		<img src="assets/images/jacket-3.png" alt="..."
+		     class="card-img-top penguin-m-card penguin-bg-ash  penguin-w-90 
+			  penguin-border-radius">
+		<div class="card-body d-flex justify-content-between flex-column">
+		  <h5 class="card-title penguin-py-card penguin-fw-700 penguin-fs-1-5 penguin-heading-black">
+		    Woman Leather Jacket
+		  </h5>
+		  <p class="card-text penguin-py-card penguin-heading-black">
+		    This is a longer card with supporting text below
+		    as a natural lead-in to additional content.
+		  </p>
+		  <div class="d-flex justify-content-between align-items-center penguin-py-card">
+		    <h1 class="penguin-heading-yellow m-0">&#36;235</h1>
+		    <a class="btn penguin-btn-gradient-green text-white border-0 
+			      penguin-border-radius penguin-btn-padding">
+		      <img alt="" src="assets/icons/shopping-cart.png" width="24"/>
+		      BUY NOW
+		    </a>
+		  </div>
+		</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+      </section>
+      <section class="my-5">
+	<div class="container">
+	  <div class="row">
+            <div class="col">
+	      <h1 class="penguin-f-bebas penguin-heading-black penguin-fs-3 py-5">Man Jacket</h1>
+	    </div>
+	  </div>
+	   <div class="row row-cols-1 row-cols-md-3 g-4">
+	    <div class="col">
+	      <div class="card h-100 penguin-border-radius">
+		<img src="assets/images/jacket-4.png" alt="Jacket One"
+		     class="card-img-top penguin-bg-ash penguin-m-card penguin-w-90 penguin-p-card
+			  penguin-border-radius">
+		<div class="card-body d-flex justify-content-between flex-column">
+		  <h5 class="card-title penguin-py-card penguin-fw-700 penguin-fs-1-5 penguin-heading-black">
+		    Snowboard Jacket Mens
+		  </h5>
+		  <p class="card-text">
+		    This is a longer card with supporting text below
+		    as a natural lead-in to additional content. This
+		    content is a little bit longer.
+		  </p>
+		  <div class="d-flex justify-content-between align-items-center penguin-py-card">
+		    <h1 class="penguin-heading-yellow m-0">&#36;235</h1>
+		    <a class="btn penguin-btn-gradient-green text-white border-0 
+			      penguin-border-radius penguin-btn-padding">
+		      <img alt="" src="assets/icons/shopping-cart.png" width="24"/>
+		      BUY NOW
+		    </a>
+		  </div>
+		</div>
+	      </div>
+	    </div>
+	    <div class="col">
+	      <div class="card h-100 penguin-border-radius">
+		<img src="assets/images/jacket-5.png" alt="Jacket Two"
+		     class="card-img-top penguin-m-card penguin-bg-ash penguin-p-card penguin-w-90 
+			    penguin-border-radius">
+		<div class="card-body d-flex justify-content-between flex-column">
+		  <h5 class="card-title penguin-py-card penguin-fw-700 penguin-fs-1-5 penguin-heading-black">
+		    Man Leather Jackets
+		  </h5>
+		  <p class="card-text">This is a short card.</p>
+		  <div class="d-flex justify-content-between align-items-center penguin-py-card">
+		    <h1 class="penguin-heading-yellow m-0">&#36;235</h1>
+		    <a class="btn penguin-btn-gradient-green text-white border-0 
+			      penguin-border-radius penguin-btn-padding">
+		      <img alt="" src="assets/icons/shopping-cart.png" width="24"/>
+		      BUY NOW
+		    </a>
+		  </div>
+		</div>
+	      </div>
+	    </div>
+	    <div class="col">
+	      <div class="card h-100">
+		<img src="assets/images/jacket-6.png" alt="..."
+		     class="card-img-top penguin-m-card penguin-bg-ash  penguin-w-90 penguin-p-card
+			  penguin-border-radius">
+		<div class="card-body d-flex justify-content-between flex-column">
+		  <h5 class="card-title penguin-py-card penguin-fw-700 penguin-fs-1-5 penguin-heading-black">
+		    Man Casual Jackets
+		  </h5>
+		  <p class="card-text">
+		    This is a longer card with supporting text below
+		    as a natural lead-in to additional content.
+		  </p>
+		  <div class="d-flex justify-content-between align-items-center penguin-py-card">
+		    <h1 class="penguin-heading-yellow m-0">&#36;235</h1>
+		    <a class="btn penguin-btn-gradient-green text-white border-0 
+			      penguin-border-radius penguin-btn-padding">
+		      <img alt="" src="assets/icons/shopping-cart.png" width="24"/>
+		      BUY NOW
+		    </a>
+		  </div>
+		</div>
+	      </div>
+	    </div>
+	   </div>
+	</div>
+      </section>
+      <section class="py-5">
+	<div class="container">
+	  <div class="row">
+            <div class="col-5 d-flex flex-column justify-content-between">
+	      <div class="container shadow-sm penguin-border-radius">
+		<div class="row">
+		  <div class="col-3 my-auto">
+		    <img alt="" src="assets/icons/shop.png" width="80%" />
+		  </div>
+		  <div class="col-9">
+		    <div class="row">
+		      <div class="col">
+			<h4 class="penguin-fs-1-5 penguin-heading-black penguin-fw-700 mb-3">
+			  Find the Perfect Fit
+			</h4>
+		      </div>
+		    </div>
+		    <div class="row">
+		      <div class="col">
+			<p class="penguin-heading-black">
+			  Everybody is different, which is why we
+			  offer styles for every body.
+			</p>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+	      </div>
+	      <div class="container shadow-sm penguin-border-radius">
+		<div class="row">
+		  <div class="col-3 my-auto">
+		    <img alt="" src="assets/icons/box.png" width="80%" />
+		  </div>
+		  <div class="col-9">
+		    <div class="row">
+		      <div class="col">
+			<h4 class="penguin-fs-1-5 penguin-heading-black penguin-fw-700 mb-3">
+			  Free Exchanges
+			</h4>
+		      </div>
+		    </div>
+		    <div class="row">
+		      <div class="col">
+			<p class="penguin-heading-black">
+			  One of the many reasons you can shop
+			  with peace of mind.
+			</p>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+	      </div>
+	      <div class="container shadow-sm penguin-border-radius">
+		<div class="row">
+		  <div class="col-3 my-auto">
+		    <img alt="" src="assets/icons/music.png" width="80%" />
+		  </div>
+		  <div class="col-9">
+		    <div class="row">
+		      <div class="col">
+			<h4 class="penguin-fs-1-5 penguin-heading-black penguin-fw-700 mb-3">
+			  Contact Our Seller
+			</h4>
+		      </div>
+		    </div>
+		    <div class="row">
+		      <div class="col">
+			<p class="penguin-heading-black">
+			  They are here to help you. That's quite 
+			  literally what we pay them for.
+			</p>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+	      </div>
+	    </div>
+            <div class="col-7">
+	      <img alt="" src="assets/images/shopping.png" width="100%" />
+	    </div>
+	  </div>
+	  
+	</div>
+      </section>
     </main>
     <footer class="bg-light p-3">
       <p class="text-center fw-bolder">Copyright Penguin Fashion 2021.</p>
