--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     <header class="penguin-header-bg-green-100">
       <!-- Navigation Start -->
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg navbar-light">
 	<div class="container">
-	  <a class="navbar-brand col-3" href="#">
+	  <a class="navbar-brand col-lg-3 col-8" href="#">
 	    <img alt="Penguin Fashion Logo" src="assets/icons/logo.png" width="100%" />
 	  </a>
 	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -28,7 +28,9 @@
 		<a href="" class="nav-link penguin-text-color penguin-fw-500 pe-5">Home</a>
 	      </li>
 	      <li class="nav-item">
-		<a href="" class="nav-link penguin-text-color penguin-fw-500 pe-5">Product</a>
+		<a href="" class="nav-link penguin-heading-black penguin-text-color penguin-fw-500 pe-5">
+		  Product
+		</a>
 	      </li>
 	      <li class="nav-item">
 		<a href="" class="nav-link penguin-text-color penguin-fw-500 pe-5">About Us</a>
@@ -44,7 +46,7 @@
       <!-- Banner Start -->
       <div class="container">
 	<div class="row align-items-center pb-5">
-          <div class="col-lg-7 col">
+          <div class="col-md-7 col-12">
 	    <h1 class="penguin-f-bebas penguin-fs-5 penguin-lh-6 penguin-heading-yellow">
 	      Be the Penguins
 	    </h1>
@@ -56,8 +58,8 @@
 	      BUY NOW
 	    </a>
 	  </div>
-          <div class="col-lg-5 col">
-	    <img alt="" src="assets/images/model.png" />
+          <div class="col-md-5 col">
+	    <img alt="" src="assets/images/model.png" class="w-100" />
 	  </div>
 	</div>
       </div>
@@ -70,7 +72,7 @@
 	      <h1 class="penguin-f-bebas penguin-heading-black penguin-fs-3 py-5">Woman Jacket</h1>
 	    </div>
 	  </div>
-	  <div class="row row-cols-1 row-cols-md-3 g-4">
+	  <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
 	    <div class="col">
 	      <div class="card h-100 penguin-border-radius">
 		<img src="assets/images/jacket-1.png" alt="Jacket One"
@@ -154,7 +156,7 @@
 	      <h1 class="penguin-f-bebas penguin-heading-black penguin-fs-3 py-5">Man Jacket</h1>
 	    </div>
 	  </div>
-	   <div class="row row-cols-1 row-cols-md-3 g-4">
+	  <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
 	    <div class="col">
 	      <div class="card h-100 penguin-border-radius">
 		<img src="assets/images/jacket-4.png" alt="Jacket One"
@@ -231,8 +233,8 @@
       <section class="py-5">
 	<div class="container">
 	  <div class="row">
-            <div class="col-5 d-flex flex-column justify-content-between">
-	      <div class="container shadow-sm penguin-border-radius">
+            <div class="col-lg-5 col-12 d-flex flex-column justify-content-between">
+	      <div class="container shadow-sm penguin-border-radius my-2">
 		<div class="row">
 		  <div class="col-3 my-auto">
 		    <img alt="" src="assets/icons/shop.png" width="80%" />
@@ -256,12 +258,12 @@
 		  </div>
 		</div>
 	      </div>
-	      <div class="container shadow-sm penguin-border-radius">
+	      <div class="container shadow-sm penguin-border-radius my-2">
 		<div class="row">
 		  <div class="col-3 my-auto">
 		    <img alt="" src="assets/icons/box.png" width="80%" />
 		  </div>
-		  <div class="col-9">
+		  <div class="col-9 col">
 		    <div class="row">
 		      <div class="col">
 			<h4 class="penguin-fs-1-5 penguin-heading-black penguin-fw-700 mb-3">
@@ -280,7 +282,7 @@
 		  </div>
 		</div>
 	      </div>
-	      <div class="container shadow-sm penguin-border-radius">
+	      <div class="container shadow-sm penguin-border-radius my-2">
 		<div class="row">
 		  <div class="col-3 my-auto">
 		    <img alt="" src="assets/icons/music.png" width="80%" />
@@ -305,7 +307,7 @@
 		</div>
 	      </div>
 	    </div>
-            <div class="col-7">
+            <div class="col-lg-7 col">
 	      <img alt="" src="assets/images/shopping.png" width="100%" />
 	    </div>
 	  </div>
